// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentAPI renders with mandatory props for one component 1`] = `
<DocumentFragment>
  .emotion-26 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-26 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:768px) {
  .emotion-26 {
    margin-left: 8.333333333333334%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-26 {
    padding: 0 12px;
    margin-top: 24px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-25 {
  margin-bottom: 40px;
}

.emotion-24 {
  overflow-x: auto;
}

.emotion-23 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-0 {
  background-color: transparent;
  border-style: solid;
  border-color: #243853;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 8px;
  height: 40px;
  text-align: left;
  vertical-align: middle;
  min-width: 64px;
}

.emotion-22 {
  background-color: transparent;
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-10 {
  padding: 8px 8px 8px 0;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  color: #555E74;
  background-color: #E4E4E4;
  border-radius: 20rem;
}

.emotion-8 svg {
  width: 16px;
  height: 16px;
}

.emotion-8 svg {
  fill: #555E74;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-6 {
    max-width: 100%;
  }
}

.emotion-5 {
  font-family: 'DM Sans',sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-5::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4267857142857143em;
}

.emotion-5::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3642857142857143em;
}

.emotion-19 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #148F39;
  vertical-align: unset;
  display: inline-block;
}

.emotion-19.emotion-19 {
  width: 24px;
  height: 24px;
}

<div
    class="emotion-26"
  >
    <div
      class="emotion-25"
    >
      <div
        class="emotion-24"
      >
        <table
          class="emotion-23"
        >
          <thead>
            <tr>
              <th
                class="emotion-0"
              >
                Name
              </th>
              <th
                class="emotion-0"
              >
                Type
              </th>
              <th
                class="emotion-0"
              >
                Default
              </th>
              <th
                class="emotion-0"
              >
                Description
              </th>
              <th
                class="emotion-0"
              >
                Required
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="emotion-22"
            >
              <td
                class="emotion-10"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-8"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-7"
                    >
                      <div
                        class="emotion-6"
                      >
                        <span
                          class="emotion-5"
                        >
                          children
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="emotion-10"
              >
                <div
                  class="emotion-9"
                >
                  <div
                    class="emotion-8"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-7"
                    >
                      <div
                        class="emotion-6"
                      >
                        <span
                          class="emotion-5"
                        >
                          string
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="emotion-10"
              />
              <td
                class="emotion-10"
              >
                Description.
              </td>
              <td
                class="emotion-10"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-19 emotion-20"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentAPI renders with props for multiple components 1`] = `
<DocumentFragment>
  .emotion-98 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-98 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:768px) {
  .emotion-98 {
    margin-left: 8.333333333333334%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-98 {
    padding: 0 12px;
    margin-top: 24px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-29 {
  margin-bottom: 40px;
}

.emotion-28 {
  overflow-x: auto;
}

.emotion-27 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-4 {
  background-color: transparent;
  border-style: solid;
  border-color: #243853;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 8px;
  height: 40px;
  text-align: left;
  vertical-align: middle;
  min-width: 64px;
}

.emotion-26 {
  background-color: transparent;
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-14 {
  padding: 8px 8px 8px 0;
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  color: #555E74;
  background-color: #E4E4E4;
  border-radius: 20rem;
}

.emotion-12 svg {
  width: 16px;
  height: 16px;
}

.emotion-12 svg {
  fill: #555E74;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-10 {
    max-width: 100%;
  }
}

.emotion-9 {
  font-family: 'DM Sans',sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-9::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.4267857142857143em;
}

.emotion-9::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.3642857142857143em;
}

.emotion-23 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #148F39;
  vertical-align: unset;
  display: inline-block;
}

.emotion-23.emotion-23 {
  width: 24px;
  height: 24px;
}

@media screen and (max-width:767px) {
  .emotion-1 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width:768px) {
  .emotion-1 {
    margin-bottom: 20px;
  }
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #162740;
  display: inline-block;
}

.emotion-0 svg {
  fill: #162740;
}

@media screen and (max-width:1439px) {
  .emotion-0 {
    font-family: 'Poppins',sans-serif;
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.22499999999999998em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.475em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: 'Poppins',sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.19166666666666665em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.44166666666666665em;
  }
}

.emotion-3 {
  margin-bottom: 32px;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
}

.emotion-2 svg {
  fill: #555E74;
}

@media screen and (max-width:1439px) {
  .emotion-2 {
    font-family: 'DM Sans',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.4625em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.4em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-2 {
    font-family: 'DM Sans',sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.37916666666666665em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.31666666666666665em;
  }
}

.emotion-96 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
}

.emotion-49 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 32px;
}

.emotion-48 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  border-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-38 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-37 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  width: 100%;
  padding: 24px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #808E99;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  background-color: transparent;
  color: #577FFB;
}

.emotion-37 svg {
  width: 16px;
  height: 16px;
}

.emotion-37 svg {
  fill: #555E74;
}

.emotion-37:hover:not(:disabled) {
  background-color: #E0E7FF;
  color: #577FFB;
}

.emotion-37:hover:not(:disabled) svg {
  fill: #577FFB;
}

.emotion-37:active:not(:disabled) {
  background-color: #AEBFFF;
  color: #577FFB;
}

.emotion-37:active:not(:disabled) svg {
  fill: #577FFB;
}

.emotion-37:disabled {
  background-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-37:disabled svg {
  fill: #BBC3C9;
}

.emotion-37 svg {
  fill: #577FFB;
}

.emotion-36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-35 {
    max-width: 100%;
  }
}

.emotion-34 {
  font-family: 'Poppins',sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 600;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-34::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3583333333333334em + -0.5px);
}

.emotion-34::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6083333333333334em;
}

.emotion-43 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  width: 100%;
  padding: 24px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #808E99;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-43 svg {
  width: 16px;
  height: 16px;
}

.emotion-43 svg {
  fill: #555E74;
}

.emotion-43:hover:not(:disabled) {
  background-color: #E0E7FF;
  color: #577FFB;
}

.emotion-43:hover:not(:disabled) svg {
  fill: #577FFB;
}

.emotion-43:active:not(:disabled) {
  background-color: #AEBFFF;
  color: #577FFB;
}

.emotion-43:active:not(:disabled) svg {
  fill: #577FFB;
}

.emotion-43:disabled {
  background-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-43:disabled svg {
  fill: #BBC3C9;
}

.emotion-46 {
  background-color: #E4E4E4;
  display: block;
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0px;
  left: 0px;
}

.emotion-47 {
  background-color: #577FFB;
  position: absolute;
  bottom: 0px;
  left: 0px;
}

.emotion-75 {
  margin: 0;
  padding: 1px 0;
  width: 100%;
}

<div
    class="emotion-98"
  >
    <div
      class="emotion-29"
    >
      <div
        class="emotion-1"
      >
        <span
          class="emotion-0"
        >
          Button1
        </span>
      </div>
      <div
        class="emotion-3"
      >
        <p
          class="emotion-2"
        >
          Component Props
        </p>
      </div>
      <div
        class="emotion-28"
      >
        <table
          class="emotion-27"
        >
          <thead>
            <tr>
              <th
                class="emotion-4"
              >
                Name
              </th>
              <th
                class="emotion-4"
              >
                Type
              </th>
              <th
                class="emotion-4"
              >
                Default
              </th>
              <th
                class="emotion-4"
              >
                Description
              </th>
              <th
                class="emotion-4"
              >
                Required
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="emotion-26"
            >
              <td
                class="emotion-14"
              >
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-12"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-11"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-9"
                        >
                          children
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="emotion-14"
              >
                <div
                  class="emotion-13"
                >
                  <div
                    class="emotion-12"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-11"
                    >
                      <div
                        class="emotion-10"
                      >
                        <span
                          class="emotion-9"
                        >
                          string
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
              <td
                class="emotion-14"
              />
              <td
                class="emotion-14"
              >
                Description
              </td>
              <td
                class="emotion-14"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-23 emotion-24"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                  />
                </svg>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="emotion-29"
    >
      <div
        class="emotion-1"
      >
        <span
          class="emotion-0"
        >
          Button2
        </span>
      </div>
      <div
        class="emotion-3"
      >
        <p
          class="emotion-2"
        >
          Component Props
        </p>
      </div>
      <div
        class="emotion-96"
        data-testid="tab-group"
      >
        <div
          class="emotion-49"
          data-testid="tab-bar"
        >
          <div
            aria-orientation="horizontal"
            class="emotion-48"
            role="tablist"
          >
            <div
              class="emotion-39"
              data-testid="distribution-wrapper"
            >
              <div
                class="emotion-38"
              >
                <button
                  aria-controls="mock-nk-1"
                  aria-selected="true"
                  class="emotion-37"
                  data-testid="tab"
                  id="mock-nk-1"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="emotion-36"
                  >
                    <div
                      class="emotion-35"
                    >
                      <span
                        class="emotion-34"
                      >
                        Props
                      </span>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="emotion-39"
              data-testid="distribution-wrapper"
            >
              <div
                class="emotion-38"
              >
                <button
                  aria-controls="mock-nk-1"
                  aria-selected="false"
                  class="emotion-43"
                  data-testid="tab"
                  id="mock-nk-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="emotion-36"
                  >
                    <div
                      class="emotion-35"
                    >
                      <span
                        class="emotion-34"
                      >
                        Overrides
                      </span>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="emotion-46"
              data-testid="tab-bar-track"
              role="presentation"
            />
            <div
              aria-hidden="true"
              class="emotion-47"
              data-testid="tab-bar-indicator"
              role="presentation"
              style="width: 0px; height: 2px; transform: translateX(0px);"
            />
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="mock-nk-1"
          class="emotion-75"
          data-testid="tab-panel"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="emotion-28"
          >
            <table
              class="emotion-27"
            >
              <thead>
                <tr>
                  <th
                    class="emotion-4"
                  >
                    Name
                  </th>
                  <th
                    class="emotion-4"
                  >
                    Type
                  </th>
                  <th
                    class="emotion-4"
                  >
                    Default
                  </th>
                  <th
                    class="emotion-4"
                  >
                    Description
                  </th>
                  <th
                    class="emotion-4"
                  >
                    Required
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="emotion-26"
                >
                  <td
                    class="emotion-14"
                  >
                    <div
                      class="emotion-13"
                    >
                      <div
                        class="emotion-12"
                        data-testid="flag"
                      >
                        <div
                          class="emotion-11"
                        >
                          <div
                            class="emotion-10"
                          >
                            <span
                              class="emotion-9"
                            >
                              children
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="emotion-14"
                  >
                    <div
                      class="emotion-13"
                    >
                      <div
                        class="emotion-12"
                        data-testid="flag"
                      >
                        <div
                          class="emotion-11"
                        >
                          <div
                            class="emotion-10"
                          >
                            <span
                              class="emotion-9"
                            >
                              string
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="emotion-14"
                  />
                  <td
                    class="emotion-14"
                  >
                    Description
                  </td>
                  <td
                    class="emotion-14"
                  >
                    <svg
                      aria-hidden="true"
                      class="emotion-23 emotion-24"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="mock-nk-1"
          class="emotion-75"
          data-testid="tab-panel"
          hidden=""
          role="tabpanel"
          tabindex="-1"
        >
          <div
            class="emotion-28"
          >
            <table
              class="emotion-27"
            >
              <thead>
                <tr>
                  <th
                    class="emotion-4"
                  >
                    Name
                  </th>
                  <th
                    class="emotion-4"
                  >
                    Type
                  </th>
                  <th
                    class="emotion-4"
                  >
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="emotion-26"
                >
                  <td
                    class="emotion-14"
                  >
                    <div
                      class="emotion-13"
                    >
                      <div
                        class="emotion-12"
                        data-testid="flag"
                      >
                        <div
                          class="emotion-11"
                        >
                          <div
                            class="emotion-10"
                          >
                            <span
                              class="emotion-9"
                            >
                              spaceInset
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="emotion-14"
                  >
                    <div
                      class="emotion-13"
                    >
                      <div
                        class="emotion-12"
                        data-testid="flag"
                      >
                        <div
                          class="emotion-11"
                        >
                          <div
                            class="emotion-10"
                          >
                            <span
                              class="emotion-9"
                            >
                              MQ&lt;string&gt;
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                  <td
                    class="emotion-14"
                  >
                    Description.
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
